Fix position of header icons when organzation select is not visible

--- a/ESSArch_Core/frontend/static/frontend/styles/modules/header.scss
+++ b/ESSArch_Core/frontend/static/frontend/styles/modules/header.scss
@@ -119,7 +119,6 @@
   justify-content: flex-end;
   margin-left: auto;
   min-width: 200px;
-  height: 100%;
   @include medium-screen {
     min-width: 0px;
     .organization-select {
